newclay/test/Compiler/Propagation/Fail/NonTypeStaticArgumentUsedAsType/main.clay
foo(#'T) --> x:'T __c__ """abort();""";

main() {
    return foo(#2);
}
